Updated contact min-height to fix too large margin

--- a/css/index.css
+++ b/css/index.css
@@ -513,6 +513,7 @@ article {
     left: 0; }
 
 .contact {
+  min-height: auto;
   display: flex;
   align-items: center;
   text-align: left; }
