--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -1,4 +1,5 @@
 .contact {
+    min-height: auto;
     display: flex;
     align-items: center;
     text-align: left;
